--- a/package.json
+++ b/package.json
@@ -35,8 +35,8 @@
     "mime": "~1.2.5",
     "lodash": "~2.2.1",
     "inherit": "~1.0.0",
-    "borschik": "~0.4.0",
-    "apw": "~0.3.9",
+    "borschik": "git://github.com/podkot/borschik.git#v0.4.0-regru-1",
+    "apw": "~0.3.13",
     "winston": ">= 0.5.0",
     "dom-js": "*",
     "mkdirp": "~0.3.5",
